[gd_scene load_steps=16 format=3 uid="uid://dsietufglmnl7"]

[ext_resource type="Texture2D" uid="uid://c1gsv1x1xdvhm" path="res://theball.png" id="1_pxrxn"]
[ext_resource type="Script" path="res://player.gd" id="1_q3836"]
[ext_resource type="Shader" path="res://player.gdshader" id="2_v6el6"]
[ext_resource type="Texture2D" uid="uid://bkpn6vqmcural" path="res://eyeball.png" id="3_nvob7"]
[ext_resource type="PackedScene" uid="uid://dlds447xi83m1" path="res://direction_indicator.tscn" id="5_rns7b"]
[ext_resource type="PackedScene" uid="uid://djlr4c64qtm5x" path="res://circle.tscn" id="6_ulotl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u5j7j"]
friction = 0.03
bounce = 0.8

[sub_resource type="Curve" id="Curve_o1wc3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2aiok"]
curve = SubResource("Curve_o1wc3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1x7eq"]
emission_shape = 1
emission_sphere_radius = 8.0
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_2aiok")
color = Color(1, 0.941176, 0.52549, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uel20"]
shader = ExtResource("2_v6el6")
shader_parameter/white_progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wkgcc"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_oo2lt"]
radius = 17.1172

[sub_resource type="Gradient" id="Gradient_hq3kb"]
interpolation_mode = 2
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_su68g"]
gradient = SubResource("Gradient_hq3kb")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[node name="Player" type="RigidBody2D"]
collision_layer = 4
collision_mask = 3
mass = 0.4
physics_material_override = SubResource("PhysicsMaterial_u5j7j")
gravity_scale = 0.0
continuous_cd = 2
max_contacts_reported = 2
contact_monitor = true
linear_damp = 0.5
script = ExtResource("1_q3836")

[node name="Circle" parent="." instance=ExtResource("6_ulotl")]
light_mask = 2
size = 17.0

[node name="Circle" parent="Circle" instance=ExtResource("6_ulotl")]
position = Vector2(-6, 5)
size = 6.0

[node name="Circle2" parent="Circle" instance=ExtResource("6_ulotl")]
position = Vector2(7, 5)
size = 6.0

[node name="TrailParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 120
process_material = SubResource("ParticleProcessMaterial_1x7eq")
lifetime = 7.0
speed_scale = 3.0
fixed_fps = 60

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_uel20")
texture = ExtResource("1_pxrxn")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_wkgcc")

[node name="LeftEyeSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_nvob7")

[node name="RightEyeSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_nvob7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_oo2lt")

[node name="DirectionIndicator" parent="." instance=ExtResource("5_rns7b")]

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(2.63281, 2.63281)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.8)
texture = SubResource("GradientTexture2D_su68g")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
